# badge-slop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  am62l_badge_buttons.patch  convert_sprites.py  convert_wbmp_custom.py  prj.conf
Badge-Launcher/: CMakeLists.txt  app.overlay  prj.conf
Badge-Launcher/src/: about_app.c  about_app.h  app_shared.h  badge_mode_app.c  badge_mode_app.h  beagle_man.c  beagle_man.h  beagle_run.c  beagle_run.h  beaglegotchi.c  beaglegotchi.h  brick_breaker.c  brick_breaker.h  button_test.c  button_test.h  chip_tunez.c  chip_tunez.h  doom_app.c  doom_app.h  doom_stubs.c  doom_wad.h  dvd_app.c  dvd_app.h  froggr.c  froggr.h  i2c_scanner_app.c  i2c_scanner_app.h  main.c  photos_app.c  photos_app.h  serial_monitor.c  serial_monitor.h  shutdown_app.c  shutdown_app.h  snake_game.c  snake_game.h  space_invaders.c  space_invaders.h  timer_app.c  timer_app.h  (+1 more)
Badge-Launcher/src/assets/: ti_logo.c
Badge-Launcher/src/assets/badge/: badge_andrei.c  roland.c  roland.wbm  sonia.c  sonia.wbm  sonia.wbmp  tux155  tux155.c
Badge-Launcher/src/assets/beaglegotchi/: eating.c  hungry.c  main.c  sleeping.c  standard.c
Badge-Launcher/src/assets/dvd/: beagle.c  dvd.c
Badge-Launcher/src/assets/photos/: 1.wbm  2.wbm  3.wbm  4.wbm  5.wbm  6.wbm  photo_1.c  photo_2.c  photo_3.c  photo_4.c  photo_5.c  photo_6.c
Badge-Launcher/src/assets/shutdown/: qr.c
Beaglegotchi/: eating.c  hungry.c  logo.h  main.c  sleeping.c  sprites.c  standard.c
DVD-Screensaver/: main.c  standard.c
boards/: esp32.overlay
